src/test/ui/issues/issue-83048.stderr
error[E0268]: `break` outside of a loop
  --> $DIR/issue-83048.rs:4:5
   |
LL |     break;
   |     ^^^^^ cannot `break` outside of a loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0268`.
